--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
         <script src="js/jquery.mobile-1.1.0.min.js"></script>
         <script src="js/knockout-2.1.0.js"></script>
 
+        <script type="text/javascript" src="js/utils/storage.js"></script>
         <script type="text/javascript" src="js/global.js"></script>
 
         <script type="text/javascript" src="js/viewmodels/viewModel.js"></script>
@@ -50,6 +51,11 @@
                     <span data-bind="text: time"></span>
                 </li>
             </ul>
+
+            <div class="padding">
+                <textarea data-bind="value: newMessage" class="padding"></textarea>
+                <button data-bind="click: postMessage" data-theme="b" data-role="button">Send message</button>
+            </div>
         </div>
 
         <div data-bind="visible: activeView() == VIEWS.LOGIN" class="padding">
